--- a/css/dev/app.css
+++ b/css/dev/app.css
@@ -125,7 +125,7 @@ body {
 
 .title {
   font-weight: 500;
-  line-height: 120%;
+  line-height: 1.2;
 }
 .title--h1 {
   font-weight: 700;
@@ -628,6 +628,49 @@ body {
 .sel-block__option.is-active {
   background-color: var(--main-color);
   color: var(--text-color);
+}
+
+input[type=text],
+input[type=email],
+input[type=tel],
+textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.input {
+  height: 50px;
+  border: 1px solid var(--gray-color);
+  font-weight: 500;
+  font-size: 16px;
+  padding: 10px 15px;
+}
+.input::placeholder {
+  color: var(--gray-color);
+}
+.input.is-error {
+  border-color: var(--accent-color);
+}
+
+textarea.input {
+  padding: 15px;
+  min-height: 150px;
+  resize: vertical;
+}
+
+.input-field {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.input-field__error {
+  color: var(--accent-color);
+}
+
+.width-long {
+  grid-column: 1/-1;
+  width: 100%;
 }[data-fls-spollers] summary {
   list-style: none;
 }
@@ -1279,6 +1322,7 @@ body {
   transition: color 0.3s;
 }
 .menu-catalog {
+  flex: 1 1 auto;
   opacity: 1;
   visibility: visible;
   background-color: transparent;
@@ -1700,6 +1744,7 @@ body {
   border-bottom: 1px solid var(--gray-color);
 }
 .footer__logo {
+  align-self: start;
   max-width: 200px;
   transition: opacity 0.3s;
 }
@@ -2694,6 +2739,182 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
 }
 .proposals__all {
   margin: 0 auto;
+}.options {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: flex-start;
+}
+.options__item {
+  position: relative;
+  cursor: pointer;
+}
+.options__input {
+  width: 0;
+  height: 0;
+  opacity: 0;
+  position: absolute;
+}
+.options__input:focus-visible + .options__text {
+  outline: 1px solid #000;
+}
+.options__input:checked + .options__text:before {
+  border-color: var(--text-color);
+}
+.options__input:checked + .options__text:after {
+  transform: scale(1);
+}
+.options__text {
+  display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 1.5;
+  gap: 10px;
+}
+.options__text:before {
+  content: "";
+  margin-top: 2px;
+  align-self: flex-start;
+  width: 20px;
+  height: 20px;
+  flex: 0 0 20px;
+  border-radius: 50%;
+  border: 1px solid var(--gray-color);
+}
+.options__text:after {
+  content: "";
+  transition: all 0.3s ease 0s;
+  transform: scale(0);
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: var(--main-color);
+  border: 0.5px solid var(--text-color);
+  position: absolute;
+  left: 5px;
+  top: 7px;
+}.orderblock {
+  margin-bottom: 120px;
+}
+.orderblock__title {
+  margin-bottom: 40px;
+}
+.orderblock__body {
+  display: grid;
+  grid-template-columns: 1.2fr 1fr;
+  gap: 32px;
+}
+.orderblock__form {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.orderblock__form .options__text {
+  font-weight: 500;
+}
+.orderblock__block {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  background-color: var(--light-gray-color);
+}
+.orderblock__inputs {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
+  gap: 20px;
+}
+.orderblock__aside {
+  align-self: start;
+  background-color: var(--light-gray-color);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.orderblock__products {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  max-height: 300px;
+  overflow: hidden auto;
+}
+.orderblock__product {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 80px 1fr;
+  gap: 15px;
+}
+.orderblock__product-img {
+  align-self: start;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.orderblock__product-body {
+  display: grid;
+  grid-template-columns: 1fr 30px;
+  gap: 12px;
+}
+.orderblock__product-body > *:not(.orderblock__product-delete) {
+  grid-column: 1/2;
+}
+.orderblock__product-name {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.5;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.orderblock__product-delete {
+  width: 30px;
+  height: 30px;
+  display: grid;
+  place-content: center;
+  transition: color 0.3s;
+}
+.orderblock__product-prices {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.orderblock__product-oldprice {
+  text-decoration: line-through;
+}
+.orderblock__product-price {
+  font-weight: 500;
+  font-size: 18px;
+  color: var(--accent-color);
+}
+.orderblock__total {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.orderblock__total-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 12px;
+  font-weight: 500;
+  line-height: 1.5;
+}.news-block {
+  margin-bottom: 120px;
+}
+.news-block__title {
+  margin-bottom: 40px;
+}
+.news-block__items {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(390px, 1fr));
+  gap: 20px;
+}
+.news-block__items:not(:last-child) {
+  margin-bottom: 40px;
 }.hero {
   margin-bottom: 120px;
 }
@@ -2819,6 +3040,181 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
 }
 .latestnews__slider:not(.swiper-initialized) .swiper-slide:nth-child(n+4) {
   display: none;
+}.info {
+  margin-bottom: 120px;
+}
+.info__container {
+  max-width: 1200px;
+}
+.info__content {
+  font-size: 18px;
+  line-height: 1.5;
+}
+.info__content > *:not(:last-child) {
+  margin-bottom: 20px;
+}
+.info__content time {
+  font-weight: 500;
+  color: var(--gray-color);
+  display: block;
+}
+.info__content img {
+  display: block;
+  width: 100%;
+  object-fit: cover;
+}
+.info__content h1,
+.info__content h2,
+.info__content h3,
+.info__content h4,
+.info__content h5,
+.info__content h6 {
+  font-weight: 500;
+  line-height: 1.2;
+}
+.info__content h1 {
+  font-weight: 700;
+}
+.info__content h1:not(:last-child) {
+  margin-bottom: 32px;
+}
+.info__content h4 {
+  font-size: 20px;
+}
+.info__content h5 {
+  font-size: 18px;
+}
+.info__content h6 {
+  font-size: 16px;
+}
+.info__content hr {
+  border-top: 1px solid var(--line-color);
+  margin-top: 20px;
+}
+.info__content a {
+  font-weight: 500;
+}
+.info__content ul,
+.info__content ol {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding-left: 25px;
+}
+.info__content ul li {
+  list-style: disc;
+}.contact {
+  margin-bottom: 120px;
+}
+.contact__body {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 32px;
+}
+.contact__content {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.contact__items {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.contact__row {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  font-size: 18px;
+  line-height: 1.5;
+}
+.contact__row:not(:last-child) {
+  padding-bottom: 24px;
+  border-bottom: 1px solid var(--line-color);
+}
+.contact__row a {
+  max-width: fit-content;
+}
+.contact__row a:not([class]) {
+  font-weight: 500;
+  transition: color 0.3s;
+}
+.contact__map {
+  display: grid;
+  min-height: 350px;
+}
+.contact__map iframe {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}.about {
+  margin-bottom: 120px;
+}
+.about__body {
+  display: grid;
+  align-items: start;
+  grid-template-columns: 1.2fr 1fr;
+  gap: 30px;
+}
+.about__content {
+  font-size: 18px;
+  line-height: 1.5;
+}
+.about__content > *:not(:last-child) {
+  margin-bottom: 20px;
+}
+.about__content img {
+  width: 100%;
+  object-fit: cover;
+}
+.about__content h1,
+.about__content h2,
+.about__content h3,
+.about__content h4,
+.about__content h5,
+.about__content h6 {
+  font-weight: 500;
+  line-height: 1.2;
+}
+.about__content h1 {
+  font-weight: 700;
+}
+.about__content h1:not(:last-child) {
+  margin-bottom: 32px;
+}
+.about__content h4 {
+  font-size: 20px;
+}
+.about__content h5 {
+  font-size: 18px;
+}
+.about__content h6 {
+  font-size: 16px;
+}
+.about__content hr {
+  border-top: 1px solid var(--line-color);
+  margin-top: 20px;
+}
+.about__content a {
+  font-weight: 500;
+}
+.about__content ul,
+.about__content ol {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding-left: 25px;
+}
+.about__content ul li {
+  list-style: disc;
+}
+.about__img {
+  position: sticky;
+  top: calc(var(--header-height));
+}
+.about__img img {
+  width: 100%;
+  object-fit: cover;
 }
 @media (max-width: 101.875em){
   .popular-cateories__container {
@@ -2829,9 +3225,23 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
     padding: 50px 30px;
   }
 }
+@media (max-width: 89.99875em){
+  .news-block__items {
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    gap: 20px 12px;
+  }
+}
+@media (max-width: 74.99875em){
+  .news-block__items {
+    grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
+  }
+}
 @media (max-width: 61.99875em){
   .news-card__title {
     font-size: 18px;
+  }
+  .input-field__error {
+    font-size: 14px;
   }
   .catalog__inner {
     grid-template-columns: 1fr;
@@ -2916,8 +3326,27 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
   .footer__logo {
     margin: 0 auto;
   }
+  .orderblock__body {
+    grid-template-columns: 1fr;
+    gap: 24px;
+  }
+  .orderblock__form {
+    display: contents;
+  }
+  .orderblock__send {
+    order: 1;
+  }
+  .orderblock__aside {
+    gap: 24px;
+  }
   .popular-cateories__body {
     padding: 50px 0;
+  }
+  .info__content {
+    font-size: 16px;
+  }
+  .about__content {
+    font-size: 16px;
   }
 }
 @media (max-width: 47.99875em){
@@ -3296,6 +3725,28 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
   .proposals__slider:not(:last-child) {
     margin-bottom: 32px;
   }
+  .orderblock {
+    margin-bottom: 80px;
+  }
+  .orderblock__title {
+    margin-bottom: 32px;
+  }
+  .orderblock__send {
+    max-width: 100%;
+  }
+  .orderblock__products {
+    gap: 16px;
+    max-height: 250px;
+  }
+  .news-block {
+    margin-bottom: 80px;
+  }
+  .news-block__title {
+    margin-bottom: 32px;
+  }
+  .news-block__items:not(:last-child) {
+    margin-bottom: 32px;
+  }
   .hero {
     margin-bottom: 80px;
   }
@@ -3324,6 +3775,43 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
   .latestnews__slider {
     overflow: visible;
   }
+  .info {
+    margin-bottom: 80px;
+  }
+  .info__content h4 {
+    font-size: 18px;
+  }
+  .info__content h5 {
+    font-size: 16px;
+  }
+  .contact {
+    margin-bottom: 80px;
+  }
+  .contact__body {
+    grid-template-columns: 1fr;
+  }
+  .contact__row {
+    font-size: 16px;
+  }
+  .contact__socials {
+    justify-content: stretch;
+  }
+  .about {
+    margin-bottom: 80px;
+  }
+  .about__body {
+    grid-template-columns: 1fr;
+  }
+  .about__content h4 {
+    font-size: 18px;
+  }
+  .about__content h5 {
+    font-size: 16px;
+  }
+  .about__img {
+    position: static;
+    top: 0;
+  }
 }
 @media (max-width: 40.62375em){
   .catalog__items {
@@ -3346,6 +3834,9 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
   .proposals__navigation .swiper-button-prev,
   .proposals__navigation .swiper-button-next {
     display: none;
+  }
+  .news-block__items {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   }
   .latestnews__head {
     flex-direction: column;
@@ -3467,8 +3958,68 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
   .info-rows__value {
     font-weight: 500;
   }
+  .orderblock__block {
+    padding: 10px;
+  }
+  .orderblock__inputs {
+    grid-template-columns: 1fr;
+    gap: 16px;
+  }
+  .orderblock__aside {
+    padding: 10px;
+  }
+  .orderblock__product {
+    grid-template-columns: 60px 1fr;
+    gap: 12px;
+  }
+  .orderblock__product-img {
+    width: 60px;
+    height: 60px;
+  }
+  .orderblock__product-body {
+    grid-template-columns: 1fr 24px;
+    gap: 8px;
+  }
+  .orderblock__product-name {
+    font-size: 16px;
+  }
+  .orderblock__product-delete {
+    width: 24px;
+    height: 24px;
+  }
+  .orderblock__product-delete svg {
+    width: 16px;
+    height: 16px;
+  }
+  .orderblock__product-oldprice {
+    font-size: 14px;
+  }
+  .orderblock__product-price {
+    font-size: 16px;
+  }
+  .orderblock__total {
+    gap: 10px;
+  }
   .hero__navigation {
     display: none;
+  }
+  .info__content h1 {
+    font-size: 34px;
+  }
+  .info__content h2 {
+    font-size: 28px;
+  }
+  .info__content h3 {
+    font-size: 20px;
+  }
+  .about__content h1 {
+    font-size: 34px;
+  }
+  .about__content h2 {
+    font-size: 28px;
+  }
+  .about__content h3 {
+    font-size: 20px;
   }
 }
 @media (max-width: 24.99875em){
@@ -3500,6 +4051,24 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
   .title--h3 {
     font-size: clamp( 20px , 16.6610667641px  +  0.6956400758vw , 28px );
   }
+  .info__content h1 {
+    font-size: clamp( 34px , 19.8095337472px  +  2.9564703223vw , 68px );
+  }
+  .info__content h2 {
+    font-size: clamp( 28px , 19.6526669101px  +  1.7391001896vw , 48px );
+  }
+  .info__content h3 {
+    font-size: clamp( 20px , 16.6610667641px  +  0.6956400758vw , 28px );
+  }
+  .about__content h1 {
+    font-size: clamp( 34px , 19.8095337472px  +  2.9564703223vw , 68px );
+  }
+  .about__content h2 {
+    font-size: clamp( 28px , 19.6526669101px  +  1.7391001896vw , 48px );
+  }
+  .about__content h3 {
+    font-size: clamp( 20px , 16.6610667641px  +  0.6956400758vw , 28px );
+  }
 }
 @media (min-width: 61.99875em){
   .aside-block::-webkit-scrollbar {
@@ -3517,6 +4086,24 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
     border: none;
     cursor: grab;
   }
+  .orderblock__products {
+    padding-right: 5px;
+  }
+  .orderblock__products::-webkit-scrollbar {
+    width: 8px;
+    display: block;
+  }
+  .orderblock__products::-webkit-scrollbar-track {
+    background: var(--line-color);
+    border-radius: 8px;
+    border: none;
+  }
+  .orderblock__products::-webkit-scrollbar-thumb {
+    background-color: var(--main-color);
+    border-radius: 8px;
+    border: none;
+    cursor: grab;
+  }
 }
 @media (min-width: 101.875em){
   .title--h1 {
@@ -3526,6 +4113,24 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
     font-size: 48px;
   }
   .title--h3 {
+    font-size: 28px;
+  }
+  .info__content h1 {
+    font-size: 68px;
+  }
+  .info__content h2 {
+    font-size: 48px;
+  }
+  .info__content h3 {
+    font-size: 28px;
+  }
+  .about__content h1 {
+    font-size: 68px;
+  }
+  .about__content h2 {
+    font-size: 48px;
+  }
+  .about__content h3 {
     font-size: 28px;
   }
 }
@@ -3672,11 +4277,24 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
   .product-detail__thumbs .product-detail__slide:hover {
     border-color: var(--footer-color);
   }
+  .orderblock__product-delete:hover {
+    color: var(--accent-color);
+  }
   .popular-cateories__item:hover .popular-cateories__item-img img {
     transform: scale(1.1);
   }
   .popular-cateories__item:hover .popular-cateories__item-title {
     background-color: var(--footer-color);
     color: var(--bg-color);
+  }
+  .info__content a:hover {
+    text-decoration: underline;
+  }
+  .contact__row a:not([class]):hover {
+    color: var(--accent-color);
+    text-decoration: underline;
+  }
+  .about__content a:hover {
+    text-decoration: underline;
   }
 }
