--- a/css/dev/app.css
+++ b/css/dev/app.css
@@ -1882,7 +1882,7 @@ textarea.input {
   transform: scale(1);
 }
 .popup__body {
-  margin: 0 auto;
+  margin: auto;
   max-height: 100%;
   max-width: 900px;
   width: 100%;
@@ -3419,6 +3419,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
     padding: 0;
   }
   .popup__body {
+    margin: 0;
     max-width: 100%;
   }
   .popup__bottom {
